--- a/test/index.html
+++ b/test/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chart.js練習用</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <div id="output"></div>
     <div class="box">
         <h2>サッカーをやったことは？
         </h2>
@@ -16,7 +18,7 @@
             <canvas id="mychart-pie" class="chart-area"></canvas>
             <div class="buttonDisp">
                 <input type="button" value="ある" id="ARU">
-                <input type="button" value="ない" onclick="answer(NAI)">
+                <input type="button" value="ない" id="NAI">
             </div>
         </div>
         <!--/box-->
@@ -26,7 +28,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
