--- a/test/index.html
+++ b/test/index.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chart.js練習用</title>
+    <title>testpage</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <div id="output"></div>
     <div class="box">
         <h2>サッカーをやったことは？
         </h2>
