--- a/test/index.html
+++ b/test/index.html
@@ -15,8 +15,8 @@
         <div class="chart-area">
             <canvas id="mychart-pie" class="chart-area"></canvas>
             <div class="buttonDisp">
-                <input type="button" value="ある" id="ARU">
-                <input type="button" value="ない" id="NAI">
+                <input type="button" value="ある" id="ARU" disabled>
+                <input type="button" value="ない" id="NAI" disabled>
             </div>
         </div>
         <!--/box-->
