--- a/test/index.html
+++ b/test/index.html
@@ -15,12 +15,16 @@
         <div class="chart-area">
             <canvas id="mychart-pie" class="chart-area"></canvas>
             <div class="buttonDisp">
-                <input type="button" value="ある" id="ARU" disabled>
-                <input type="button" value="ない" id="NAI" disabled>
+                <input type="button" value="ある" id="ARU">
+                <input type="button" value="ない" id="NAI">
             </div>
         </div>
         <!--/box-->
     </div>
+    <form action="">
+    <input type="text" id="pas">
+   </form>
+    <button id="reset" disabled>reset</button>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
