--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>ポートフォリオ</h1>
     <a href="./Markdown">マークダウン</a>
-    <a href="../PORTFOLIO/test/index.html">testpage</a>
+    <a href="../PORTFOLIO/test/Chart_test.html">testpage</a>
 </body>
 </html>
