--- a/test/Chart_test.html
+++ b/test/Chart_test.html
@@ -22,10 +22,10 @@
 
         <!--/box-->
     </div>
-    <form action="">
-    <input type="text" id="pas">
-   </form>
-    <button id="reset" disabled>reset</button>
+    <form action="" id="reset">
+        <input type="text" id="pas">
+    </form>
+    <!-- <button id="reset" disabled>reset</button> -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
