--- a/test/Chart_test.html
+++ b/test/Chart_test.html
@@ -10,8 +10,7 @@
 
 <body>
     <div class="box">
-        <h2>サッカーをやったことは？
-        </h2>
+        <h2>サッカーをやったことは？</h2>
         <div class="chart-area">
             <canvas id="mychart-pie" class="chart-area"></canvas>
             <div class="buttonDisp">
