--- a/test/Chart_test.html
+++ b/test/Chart_test.html
@@ -9,22 +9,22 @@
 </head>
 
 <body>
+
     <div class="box">
-        <h2>サッカーをやったことは？</h2>
+        <h2>サッカーをやったことが</h2>
         <div class="chart-area">
             <canvas id="mychart-pie" class="chart-area"></canvas>
             <div class="buttonDisp">
-                <input type="button" value="ある" id="ARU" disabled>
-                <input type="button" value="ない" id="NAI" disabled>
+                <input type="button" value="ある" id="Yes" disabled>
+                <input type="button" value="ない" id="No" disabled>
+                <input type="button" value="リセット" id="dummy" disabled>
             </div>
         </div>
-
-        <!--/box-->
     </div>
+
     <form action="" id="reset">
         <input type="text" id="pas">
     </form>
-    <!-- <button id="reset" disabled>reset</button> -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
