機能実装、管理者モードの時にダミーボタンを本物に変えた

--- a/test/Chart_test.html
+++ b/test/Chart_test.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <form action="" id="reset">
+    <form action="" id="textForm">
         <input type="text" id="pas">
     </form>
 
