GASで作ったアンケートを追加

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>ポートフォリオ</h1>
     <a href="./Markdown">マークダウン</a>
-    <a href="../PORTFOLIO/test/Chart_test.html">testpage</a>
+    <a href="../PORTFOLIO/test/Chart_test.html">簡易アンケート(ローカルストレージ)</a>
+    <a href="https://script.google.com/macros/s/AKfycbxkk2NM4XmPqsKd765Wh2w6tWjTx8iunwCEYe_iZiwUhou4eA_RTt7oOf83Xfu7i-3J5A/exec">簡易アンケート(GAS)</a>
 </body>
 </html>
