--- a/index.html
+++ b/index.html
@@ -1,16 +1,66 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ポートフォリオ</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>ポートフォリオ</h1>
-    <a href="./Markdown">マークダウン</a>
-    <a href="../PORTFOLIO/test/Chart_test.html">簡易アンケート(ローカルストレージ)</a>
-    <a href="https://script.google.com/macros/s/AKfycbya4l7szsnLjuaMa3BAYwQ2f_rTptC30QYx3hQgR0e9IddVaL2pEuDxeC947uTvNlFH/exec">簡易アンケート(GAS)</a>
+    <header>
+        <h1>ポートフォリオ</h1>
+
+    </header>
+    <main>
+        <details id="linkList">
+            <summary id="linkHeader">制作物一覧</summary>
+            <div id="link">
+                <a href="../PORTFOLIO/test/Chart_test.html">簡易アンケート(ローカルストレージ)</a><br>
+                <a
+                    href="https://script.google.com/macros/s/AKfycbxkk2NM4XmPqsKd765Wh2w6tWjTx8iunwCEYe_iZiwUhou4eA_RTt7oOf83Xfu7i-3J5A/exec">簡易アンケート(googleスプレッドシート)<span
+                        class="badge bg-secondary,badge text-bg-primary">New</span></a><br>
+            </div>
+        </details>
+
+
+        <div class="box">
+            <h2>アンケート(デモ)</h2>
+            <div class="chart-area">
+                <canvas id="mychart-pie" class="chart-area"></canvas>
+                <div class="buttonDisp">
+                    <input type="button" value="ある" id="Yes">
+                    <input type="button" value="ない" id="No">
+                    <input type="button" value="リセット" id="reset">
+                </div>
+            </div>
+        </div>
+
+        <!-- ページラベル -->
+        <nav aria-label="..." class="pageLabel">
+            <ul class="pagination justify-content-center">
+              <li class="page-item disabled">
+                <a class="page-link">戻る</a>
+              </li>
+              <li class="page-item active"><a class="page-link" href="./">1</a></li>
+              <li class="page-item" aria-current="page">
+                <a class="page-link" href="../PORTFOLIO/test/Chart_test.html">2</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="https://script.google.com/macros/s/AKfycbxkk2NM4XmPqsKd765Wh2w6tWjTx8iunwCEYe_iZiwUhou4eA_RTt7oOf83Xfu7i-3J5A/exec">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="../PORTFOLIO/test/Chart_test.html">次へ</a>
+              </li>
+            </ul>
+          </nav>
+
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+            integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+        <script src="main.js"></script>
+    </main>
 </body>
+
 </html>
